docs: verify Layer 5 and update version table / README layer map